# tetris_engine

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  .python-version  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.toml  build.sh  deploy.yaml  help.sh  install_local.sh  load_balancer.yaml  main.py  pyproject.toml  requirements.txt  run.sh  run_commandline.sh  setup.py  setup.sh
.github/workflows/: CI.yml  rust.yml  wheels.yml
.run/: Build rust_tetris lib.run.xml  Build rust_tetris macOS.run.xml  Build tetris_engine_backend lib.run.xml  Build tetris_engine_backend macOS.run.xml  Run main.py.run.xml  Run rust_tetris macOS.run.xml  Run rust_tetris.run.xml  Run tetris_engine_backend macOS.run.xml  Run tetris_engine_backend.run.xml  Test tetromino__tests.run.xml
common/: Cargo.toml
common/src/: lib.rs  tetromino.rs
src/: app.rs  board.rs  lib.rs  main.rs  tetromino.rs  util.rs  well.rs  well_command_line.rs
tests/functional_tests/: test_game.py
tests/unit_tests/: test_tetris_engine.py
tetris_engine/: __init__.py  tetris_engine.py
ui-browser/: Cargo.toml  build_wasm.sh  index.html  index.js
ui-browser/src/: lib.rs  main.rs  well_browser.rs
ui-commandline/: Cargo.toml
ui-commandline/src/: main.rs  well_command_line.rs
