[package]
name = "rust_tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
env_logger = "0.10.0"
rocket = {version = "0.5.0-rc.2"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.2.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]}
lazy_static = "1.4.0"
