[package]
name = "tetris_engine_backend"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
log = "0.4"
env_logger = "0.11.8"
log4rs = "1.4.0"
lazy_static = "1.4.0"

[lib]
name = "tetris_engine_backend"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.27.2"
features = ["extension-module"]