[project]
name = "tetris_engine"
version = "0.3.4"
description = "A tetris engine written in rust"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "setuptools-rust>=1.12.0",
]


[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[dependency-groups]
test = [
    "bumpversion>=0.6.0",
    "pytest>=9.0.2",
]
