[project]
name = "tetris_engine"
version = "0.3.4"
description = "A tetris engine written in rust"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "setuptools-rust>=1.12.0",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[dependency-groups]
test = [
    "pytest>=9.0.2",
]
cicd = [
    "bumpversion>=0.6.0",
    "maturin>=1.11.5",
    "cibuildwheel>=3.3.1",
]

[tool.setuptools]
packages = ["tetris_engine"]
zip-safe = false

[[tool.setuptools-rust.ext-modules]]
target = "tetris_engine_backend"
binding = "pyo3"