[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Peter Lucia <peter-lucia@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4"
env_logger = "0.9"
log4rs = "1.1.1"
