[package]
name = "ui-commandline"
version = "0.1.0"
edition = "2021"
authors = ["Peter Lucia <peter-lucia@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
log4rs = "1.1.1"
log = "0.4"

[dependencies.common]
path = "../common"
version = "^0.1.0"
